added some semantic tags

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
     </header>
 
-    <div class="body">
+    <main class="body">
         <div class="pricing">
             <h1>Pricing</h1>
         </div>
@@ -65,9 +65,9 @@
             </div>
 
         </div>
-    </div>
+    </main>
 
-    <div class="footer ">
+    <footer class="footer ">
         <div class="x-container">
             <div class="footer_content">
                 <img alt="Biology study">
@@ -82,5 +82,5 @@
             </div>
         </div>
 
-    </div>
+    </footer>
 </body>
